[gd_scene load_steps=6 format=3 uid="uid://gameover123"]

[ext_resource type="Script" path="res://GameOver.gd" id="1_1"]
[ext_resource type="Texture2D" path="res://endbg.png" id="1_2"]
[ext_resource type="Texture2D" path="res://coing.png" id="1_3"]
[ext_resource type="Texture2D" path="res://dia1g.png" id="1_4"]
[ext_resource type="Texture2D" path="res://home.png" id="1_5"]
[ext_resource type="Texture2D" path="res://retry.png" id="1_6"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="BlurBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.4)

[node name="EndBgContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -500.0
offset_right = 400.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndBg" type="TextureRect" parent="EndBgContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2")
expand_mode = 1
stretch_mode = 5

[node name="ContentContainer" type="VBoxContainer" parent="EndBgContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="GameEndLabel" type="Label" parent="EndBgContainer/ContentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
text = "Game End"
horizontal_alignment = 1

[node name="CurrencyContainer" type="VBoxContainer" parent="EndBgContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="GoldContainer" type="HBoxContainer" parent="EndBgContainer/ContentContainer/CurrencyContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="GoldIcon" type="TextureRect" parent="EndBgContainer/ContentContainer/CurrencyContainer/GoldContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_3")
expand_mode = 1
stretch_mode = 5

[node name="GoldLabel" type="Label" parent="EndBgContainer/ContentContainer/CurrencyContainer/GoldContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
text = "0"
horizontal_alignment = 1

[node name="DiamondContainer" type="HBoxContainer" parent="EndBgContainer/ContentContainer/CurrencyContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="DiamondIcon" type="TextureRect" parent="EndBgContainer/ContentContainer/CurrencyContainer/DiamondContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_4")
expand_mode = 1
stretch_mode = 5

[node name="DiamondLabel" type="Label" parent="EndBgContainer/ContentContainer/CurrencyContainer/DiamondContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
text = "0"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="EndBgContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="HomeButton" type="Control" parent="EndBgContainer/ContentContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="EndBgContainer/ContentContainer/ButtonsContainer/HomeButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5")
expand_mode = 1
stretch_mode = 5

[node name="RetryButton" type="Control" parent="EndBgContainer/ContentContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="EndBgContainer/ContentContainer/ButtonsContainer/RetryButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6")
expand_mode = 1
stretch_mode = 5
